--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="main-header">
     <div class="container">
       <div class="logo">
-        <img src="images/logo.jpeg">
+        <img src="logo.jpeg">
         <span>CoreTech Innovations</span>
       </div>
       <nav class="nav">
