--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <header class="main-header">
     <div class="container">
       <div class="logo">
-        <img src="images/logo.jpeg" alt="CoreTech Logo" />
+        <img src="logo.jpeg" alt="CoreTech Logo" />
         <span>CoreTech Innovations</span>
       </div>
       <nav class="nav">
